--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,9 +3,10 @@ port: 8081
 
 log:
   level: "debug"
-  filename: "./log/bluebell.log"
+  access_log_file: "./log/bluebell.log"
+  error_log_file: "./log/error.log"
   max_size: 1000
-  max_age: 3600
+  max_age: 30
   max_backups: 5
 
 mysql:
