--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,7 +13,7 @@ mysql:
   host: 127.0.0.1
   port: 3306
   user: root
-  password: 123456
+  password: jsw7
   db: bluebell
   max_open_conns: 100
   max_idle_conns: 20
